--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=root
 spring.datasource.password=123456lyh
 
 # mybatis
-mybatis.type-aliases-package=com.aaa.entity
+mybatis.type-aliases-package=com.entity
 
  spring.thymeleaf.suffix=.html
  spring.thymeleaf.mode=HTML5
